--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <div class="col-md-12">
           <div class="media">
             <div class="media-body">
-              <h2>Latest Mars News</h2>
+              <h2 style="color:blue">Latest Mars News</h2>
               <h4 class="media-heading">{{ mars.news_title }}</h4>
               <p>{{ mars.news_paragraph }}</p>
             </div>
@@ -35,7 +35,7 @@
       <!-- Section for Featured Image and Facts table -->
       <div class="row" id="mars-featured-image">
         <div class="col-md-8">
-          <h2>Featured Mars Image</h2>
+          <h2 style="color:blue">Featured Mars Image</h2>
 
           <!-- if images is False/None/non-existent, then default to error message -->
           <img
@@ -49,7 +49,7 @@
           <!-- Mars Facts -->
           <div class="row" id="mars-facts">
             <table class="table table-striped"> 
-                <h4>Mars Facts</h4>
+                <h4 class="text-center", style="color:blue">Mars Facts</h4>
                 {{ mars.facts | safe }}
             </table>
           </div>
@@ -59,7 +59,7 @@
       <!-- Section for Mars Hemispheres -->
       <div class="row" id="mars-hemispheres">
         <div class="page-header">
-          <h2 class="text-center">Mars Hemispheres</h2>
+          <h2 class="text-center", style="color:blue">Mars Hemispheres</h2>
         </div>
 
         {% for hemisphere in mars.hemispheres %}
